Updates version number to 0.0.8Alpha.